--- a/back/package.json
+++ b/back/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/index.js",
-    "vercel-build": "echo hello"
+    "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
